# tenstorrent-dra-framework

./: .gitignore  AGENTS.md  README.md  go.mod  go.sum
docs/: README.md  VM.md
docs/guides/: TT_METRICS_EXPORTER.md
docs/theory/: DRA.md  TENSTORRENT_CARDS.md
src/dra/: README.md  generate.go
src/dra/cmd/tt-dra-driver/: main.go
src/dra/cmd/tt-dra-manifests/: main.go
src/dra/internal/device/: discovery.go  discovery_test.go
src/dra/internal/dra/: README.md  cardspec.go  deviceclass.go  manifest.go  resourceclaim.go  resourceslice.go  resourceslice_test.go
src/dra/manifests/: deviceclasses.yaml  resourceclaims.yaml  resourceslices.yaml
src/dra/test/: cardspec_test.go  device_discovery_test.go  deviceclass_test.go  manifests_test.go  resourceclaim_test.go  resourceslice_test.go
src/telemetry/: README.md  pyproject.toml
src/telemetry/tests/: test_metrics.py
src/telemetry/tt_telemetry/: __init__.py  app.py  device.py  metrics.py
test/vm/: Makefile
test/vm/kind/: ttsim-dra.yaml
test/vm/scripts/: load-tt-kmd.sh  validate-foundation.sh
test/vm/smoke/: ttsim-device-check.yaml
