[project]
name = "tt-telemetry"
version = "0.1.0"
description = "Telemetry service for Tenstorrent Kubernetes validation"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
